# sb-image-create

./: .gitignore  AGENTS.md  README.md  WHERE_AM_I.md  architecture.md  context.md  design.md  feedback.md  image-config.toml.example  lees-process.md  product-definition.md  project-plan.md  pyproject.toml  result-review.md  sprint-plan.md  sprint-review.md
agents/: story-art-director.md  thumbnail-conversion.md
backlog/: schema.md  template.md
skills/: backlog.md  code-review.md  development-loop.md  documentation.md  paired-image-generation.md  story-image-direction.md  test-as-lee.md
src/sb-image-create/: __init__.py  main.py
src/sb_image_create/: __init__.py  main.py
tests/: test_cli.py
